--- a/_posts/2022-11-20-xivort.md
+++ b/_posts/2022-11-20-xivort.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-xivort.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 I'm sure xivorts appeared in a previous edition, but here they get some new
 4e-specific lore.
 
@@ -112,3 +123,5 @@ As far as low-level enemies go, they're... okay I guess? Fighting these guys
 instead of kobolds is a nice change of pace, but I'll confess I lose a bit of
 enthusiasm for them when I realize they're another attempt to hype up the Shadow
 power source.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
