--- a/_posts/2022-11-21-yeti.md
+++ b/_posts/2022-11-21-yeti.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-yeti.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Yetis are inspired by real world folklore and I'm sure they showed up in a
 previous edition of D&D before. This seems to be their 4e debut.
 
@@ -115,3 +126,5 @@ monsters available. That's just a personal taste thing, though.
 
 It wouldn't be hard to use these stat blocks for a sapient and friendlier yeti
 if that's how you want them to be in your campaign.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
