--- a/_posts/2022-11-23-yuan-ti.md
+++ b/_posts/2022-11-23-yuan-ti.md
@@ -17,15 +17,15 @@ would come out in the MV.
 
 The lore section of this page lacks the nifty creation myth from the MV entry,
 sticking to a more generic "perfidious infiltrators" profile for the yuan-ti. It
-does add a new bit, however: the snake god Zehir doesn't just want to see
-favorite people thrive in the world. His true goal to become the supreme
-authority in the cosmos. He's convinced that the universe can only withstand the
-return of the primordials if it's led by the strong hand of a single absolute
-ruler.
+does add a new bit, however: the snake god Zehir doesn't just want to see his
+favorite people thrive in the world. His true goal is to become the supreme
+authority in the cosmos. Zehir is convinced that the universe can only withstand
+the return of the primordials if it's led by the strong hand of a single
+absolute ruler.
 
 So this means we have at least two authoritarian assholes in our current
 pantheon: Asmodeus and Zehir. Big Z's goals are not widely known in the world -
-only is most powerful and trusted servants are privy to this mystery. There are
+only his most powerful and trusted servants are privy to this mystery. There are
 other gods who are aware of this but they're content to merely keep an eye on
 the snake god as long as his machinations continue to hurt their enemies. Things
 might get more heated should Zehir explicitly turn against his fellow deities.
