--- a/_posts/2022-12-09-boggle.md
+++ b/_posts/2022-12-09-boggle.md
@@ -7,8 +7,8 @@ tags:
 ---
 
 {::nomarkdown}
-<figure class="right">
-  <img src="{{ "/assets/wir-tnv-boggle-hand.png" | absolute_url }}"/>
+<figure class="left">
+  <img src="{{ "/assets/wir-tnv-boggle-body.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2011 Wizards of the Coast.
   </figcaption>
@@ -23,11 +23,10 @@ Monster Manual II. This is their 4e debut.
 ## The Lore
 
 Boggles are mischievous humanoid fey. They've been around a very long time, and
-are actually the common ancestors to both banderhobbs and mundane goblins!
-They're sapient but not very sophisticated, and love nothing more than playing
-cruel pranks on others. They move from the Feywild to the world every time they
-find a fey crossing, because the world's mortals are so much more easily fooled
-than the jaded fey of their home plane.
+are actually the common ancestors to both banderhobbs and mundane goblins! They
+love playing cruel pranks on others, and move from the Feywild to the world
+every time they find a fey crossing. The world's mortals are so much more easily
+fooled than the jaded fey of their home plane!
 
 These creatures are naturally sneaky and have some capacity to bend space. It's
 common for a child to complain to their parents about a "bogeyman" who keeps
@@ -37,8 +36,8 @@ spoiling milk, tying shoelaces together, setting clothes on fire, and all the
 stuff you might have read in old real-world myths about the Fair Folk. At the
 most cruel end that does include switching infants for swaddled animals or just
 plain snatching children away. There are also some adventurer-specific pranks
-like disassembling armor and hiding the pieces, or swapping brand new weapons
-for old and rusty replacements.
+like disassembling armor and hiding the pieces, or swapping brand new or magic
+weapons for old and rusty replacements.
 
 For all their cruelty, boggles are cowards, preferring to do their spying and
 sabotage through those mini-portals they can create. They get nervous and
@@ -80,7 +79,7 @@ automatically dealing a bit of physical damage and allowing the boggle to
 teleport 3 squares.
 
 Sight Stealers work very well against controllers and ranged strikers,
-particularly if they have buddies that can distract the other PCs from them.
+particularly if they have buddies that can keep the other PCs away from them.
 
 ### Boggle Blink Trickster
 
@@ -133,8 +132,8 @@ automatically fall prone.
 ## Final Impressions
 
 {::nomarkdown}
-<figure class="left">
-  <img src="{{ "/assets/wir-tnv-boggle-body.png" | absolute_url }}"/>
+<figure class="right">
+  <img src="{{ "/assets/wir-tnv-boggle-hand.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2011 Wizards of the Coast.
   </figcaption>
