--- a/_posts/2023-02-06-mooncalf.md
+++ b/_posts/2023-02-06-mooncalf.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-tnv-mooncalf.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2011 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 This was the first time I saw these monsters, and they feel new.
 
 ## The Lore
@@ -146,3 +157,5 @@ season.
 Rogues work very well as the Thing From Beyond that a Far Realm cult might be
 trying to summon. They're threats on par with an adult dragon or a titan, but
 are completely impervious to negotiation.
+
+This post is part of a series! Click [here][1] to see the others.
