--- a/_posts/2023-02-06-mooncalf.md
+++ b/_posts/2023-02-06-mooncalf.md
@@ -158,4 +158,4 @@ Rogues work very well as the Thing From Beyond that a Far Realm cult might be
 trying to summon. They're threats on par with an adult dragon or a titan, but
 are completely impervious to negotiation.
 
-This post is part of a series! Click [here][1] to see the others.
+[1]: {{ "/projects/tnv/" | relative_url }}
