Fix first appearance

--- a/_posts/2023-02-06-mooncalf.md
+++ b/_posts/2023-02-06-mooncalf.md
@@ -17,7 +17,9 @@ tags:
 
 This post is part of a series! Click [here][1] to see the others.
 
-This was the first time I saw these monsters, and they feel new.
+This was the first time I saw these monsters, but it looks like they first
+appeared in Heart of Nightfang Spire, one of the modules in the official Third
+Edition adventure path.
 
 ## The Lore
 
