Link to peryton picture

--- a/_posts/2022-02-14-peryton.md
+++ b/_posts/2022-02-14-peryton.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-tnv-peryton.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2011 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 It's possible perytons appeared in previous editions, but this is the first time
 I remember seeing them. I think they might be based in real-world folklore?
 
@@ -107,3 +118,5 @@ creatures who will explicitly target and kill PCs who are down and out. Being
 carried off by an elder peryton sucks, too, but it could lead to a fun scene a
 captured PCs trying to improvise an escape route using the items found on the
 nest.
+
+[1]: {{ "/projects/tnv/" | relative_url }}
