--- a/_posts/2022-02-14-peryton.md
+++ b/_posts/2022-02-14-peryton.md
@@ -28,7 +28,7 @@ and the stag's fur is blue-black. Both males and females have antlers, but males
 also have distinctive light blue feathers on their chests. Their shadows,
 interestingly enough, don't correspond to their physical shapes and are instead
 humanoid. Perytons like to nest in tall mountain ridges, which in the Vale means
-the Cairngorm peaks and Stonemarch to the northwest, or the Danwforge range to
+the Cairngorm peaks and Stonemarch to the northwest, or the Dawnforge range to
 the east.
 
 Some sages speculate that the first perytons were elves changed by some horrible
