--- a/_posts/2023-03-01-ragewind.md
+++ b/_posts/2023-03-01-ragewind.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-tnv-phantom-brigade.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2011 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Ragewinds first appeared in Third Edition, and make their Fourth Edition debut
 here. They're mostly generic, with some added hooks for the Vale.
 
@@ -74,3 +85,5 @@ into these things, because they spend their time digging up old ruins and
 battlefields: Dythan's Legion, the Gray Company, the Hunter Spiders. Y'know, our
 usual suspects. I imagine this would happen as the climax of their story arcs,
 as they're just about to find what they're looking for.
+
+[1]: {{ "/projects/tnv/" | relative_url }}
