--- a/_posts/2023-03-31-treants.md
+++ b/_posts/2023-03-31-treants.md
@@ -6,6 +6,8 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][1] to see the others.
+
 Treants appear in the MM1 in a generic form. Here we see not one but two
 specific treant factions present in the Vale.
 
@@ -29,10 +31,10 @@ today. Draconic magic and breath weapons cut a swathe of devastation across the
 center of the region that created the large open area there, and separated
 Winterbole Forest to the north from Harken Forest to the south.
 
-The dragons won that one, and moved into the "cleared" area. They were powerful,
-but what really brought them victory was the growing distrust and suspicion
-among the treants themselves, which caused them to stop working together and
-turn on each other.
+The dragons would go on to win the war and move into the "cleared" area. They
+were powerful, but what really brought them victory was the growing distrust and
+suspicion among the treants themselves, which caused them to stop working
+together and turn on each other.
 
 You see, the deciduous treants began to think their coniferous relatives had
 something to do with the death of Malorunth, and this suspicion festered enough
@@ -55,17 +57,27 @@ Winterbole. The next one will probably be a Winterbole attack, but sometimes it
 happens that the same side will launch two attacks in a row.
 
 Yes, the last battle in this war is older than the fall of Nerath, and there
-probably are no surviving records of it. Maybe there are a few very old elves
-and eladrin who remember it. And maybe the Frost Witches or Harken's Heart
+probably are no surviving Nerathi records of it. Maybe there are a few very old
+elves and eladrin who remember it. And maybe the Frost Witches or Harken's Heart
 druids might know, since they live in those forests. But almost no one else has
 any idea that a new Great March might be in their future.
 
 ## Winterbole Treants
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-tnv-treants-winterbole.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2011 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 These conifer creatures consider fleshy humanoids to be annoying pests and
 parasites, and try to keep their territory free of them. This is made more
-difficult by the fact that Winterbole Forest has a lot of Arkhosian ruins and
-Shadowfell crossings in it, so delvers and explorers often seek those out.
+difficult by the fact that their slice of Winterbole Forest has a lot of
+Arkhosian ruins and Shadowfell crossings in it, so delvers and explorers often
+seek those out.
 
 They also have an alliance with Bitterstrike, whom we already met. The dragon
 believes the treants to be her vassals, and they put up with this delusion as
@@ -144,15 +156,24 @@ slams while pulling the blizzard to sit on top of themselves.
 
 ## Harken Treants
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-tnv-treants-harken.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2011 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 The deciduous treants of the Harken forest are quite standard as far as rules
 go. They use the standard stat blocks for the Treant and Bramblewood Treant from
 the [Monster Vault][2]. They do often work alongside wood woads, so we have a
 couple of stat blocks for those in addition to the (by now slightly outdated)
 basic stats from the [Monster Manual 2][3].
 
-Their leader is also exceptional: Mysteriphal is the oldest living creature in
-the entire Vale. He was there before Malorunth fell, and sworn to forever
-protect the petrified husk of his patron. As mentioned above, he believes
+Their leader is the most exceptional thing about them: Mysteriphal is the oldest
+living creature in the entire Vale. He was there when Malorunth fell, and swore
+to forever protect his petrified husk. As mentioned above, Mysteriphal believes
 Malorunth will return to life once his murder is avenged. In our narrative
 present he's a huge fire-and-curse scarred thing, any hints of his former
 kindness and nobility long gone.
@@ -231,7 +252,7 @@ they're still effective, they also make him much more dangerous.
 
 This is a tragic story all around. Probably only the treants themselves remember
 why they're fighting, and barely anyone else would remember they're fighting at
-all due to the large quiet periods between Great Marches.
+all due to the long quiet periods between Great Marches.
 
 The truth about Malorunth's death is a mystery literally older than mortal
 civilization, making it almost impossible to solve. And even if our nearly-Epic
@@ -239,5 +260,6 @@ PCs manage it, it's probably still not enough to get the treants to end their
 war. It might have started over this murder mystery, but after millenia of
 conflict both sides have plenty of reason to keep hating each other.
 
+[1]: {{ "/projects/tnv/" | relative_url }}
 [2]: {{ "/2021/01/06/treant.html" | relative_url }}
 [3]: {{ "/2022/03/08/wood-woad.html" | relative_url }}
