--- a/_posts/2023-10-28-hackaton-cp2020.md
+++ b/_posts/2023-10-28-hackaton-cp2020.md
@@ -13,7 +13,7 @@ tags:
 <figure class="center">
    <img src="{{ "/assets/cp2020-cover.jpg" | absolute_url }}"/>
    <figcaption>
-     Our target system
+     I used to think this guy on the cover was so cool.
    </figcaption>
 </figure>
 {:/nomarkdown}
