Add alt text to picture

--- a/_posts/2023-10-28-hackaton-cp2020.md
+++ b/_posts/2023-10-28-hackaton-cp2020.md
@@ -11,7 +11,8 @@ tags:
 
 {::nomarkdown}
 <figure class="center">
-   <img src="{{ "/assets/cp2020-cover.jpg" | absolute_url }}"/>
+   <img src="{{ "/assets/cp2020-cover.jpg" | absolute_url }}"
+        alt="The cover of Cyberpunk 2020"/>
    <figcaption>
      I used to think this guy on the cover was so cool.
    </figcaption>
