SR5 hackaton: small edits

--- a/_posts/2023-11-09-hackaton-sr5-1.md
+++ b/_posts/2023-11-09-hackaton-sr5-1.md
@@ -90,10 +90,11 @@ deck is once again the main thing making "decker" an exclusive specialist niche.
 
 Devices have Matrix Attributes that dictate their base capabilities. All of them
 have a Device Rating that represents their general robustness, a Firewall
-attribute that is used for defensive rolls, and a Data Processing test that gets
-used for searches and other generally lawful operations. Cyberdecks have two
-others, Attack and Sleaze, which are used for hacking. Hosts have also have
-these so that they can fight back against hackers.
+attribute that is used for defensive rolls, and a Data Processing attribute that
+gets used for searches and other generally lawful operations. Cyberdecks have
+two others, Attack and Sleaze, which are used for hacking. Hosts have also have
+these so that they can fight back against hackers. The full array is abbreviated
+as "ASDF".
 
 Most devices, including hosts, have "static" attributes, but cyberdecks have an
 "attribute array" of four numbers that can be allocated dynamically between
@@ -133,8 +134,8 @@ finished you'll need to wait a bit longer if you still need those marks.
 
 IC fights using the host's rating and ASDF attributes. Some variants try to
 place additional marks on the hacker, while some attack either the hacker's
-deck, their brain, or both at the same time. The more marks the hacker has on
-them, the greater the damage they do. It's possible for the hacker to spend
+deck, their brain, or both at the same time. The more marks IC has on the
+hacker, the greater the damage they do. It's possible for the hacker to spend
 actions removing these marks, but this ironically is also an illegal action and
 accrues Overwatch. It also doesn't make the host or the IC forget about the
 hacker, it just makes enemy attacks less effective.
@@ -143,14 +144,16 @@ Matrix perception works a bit differently than in the past. Most icons in close
 proximity (and there are several ways to define this) are automatically visible
 and identifiable unless they're _running silent_, which means they require a
 Matrix perception test to notice. Running silent gives a penalty to all of that
-icon's rolls, so the hacker is usually the only one running silent during a run.
+icon's rolls, so the hacker is usually the only one running silent during a run,
+and that only when necessary.
 
 ## Run Parameters
 
 We'll be using the sample decker from the core book, a dwarf lady. She has a
-Hermes Chariot starter deck with a device rating of 2 and an ASDF of
-5-4-4-2. She has a few programs that help with cybercombat but her specialty is
-still stealth, with an effective skill of 9 for that approach.
+Hermes Chariot starter deck with a device rating of 2 and an ASDF of 5-4-4-2
+(which is dynamic, as mentioned before). She has a few programs that help with
+cybercombat but her specialty is still stealth, with an effective skill of 9 for
+that approach.
 
 It looks like our host design philosophy is The Full Gibson once again. A given
 location will have a single host that takes care of all of its business and is
