--- a/_posts/2023-11-12-hackaton-sr5-2.md
+++ b/_posts/2023-11-12-hackaton-sr5-2.md
@@ -13,7 +13,7 @@ tags:
 <figure class="center">
    <img src="{{ "/assets/sr5-cover.png" | absolute_url }}"/>
    <figcaption>
-     Shadowrun 20th Anniversary's cover.
+     Shadowrun 5th Edition's cover.
    </figcaption>
 </figure>
 {:/nomarkdown}
