--- a/_posts/2023-11-09-hackaton-sr5-1.md
+++ b/_posts/2023-11-09-hackaton-sr5-1.md
@@ -186,6 +186,6 @@ With all this in place, we'll see how our decker does next post.
 
 
 [^1]: Petty rant time: Many Shadowrun GMs love the idea of omniscient and
-omnipotent organizations that stand ever ready to squash players, and I guess
-GOD made it in either because of their demands or because some of SR5's writers
-were ascended GMs themselves.
+    omnipotent organizations that stand ever ready to squash players, and I
+    guess GOD made it in either because of their demands or because some of
+    SR5's writers were ascended GMs themselves.
