Denizens of the sea

--- a/_posts/2024-04-28-atlantis.md
+++ b/_posts/2024-04-28-atlantis.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The People of Atlantis"
+title: "Denizens of the Sea"
 tags:
     - gurps
     - dungeon-fantasy
@@ -21,8 +21,8 @@ empire that ruled the waves in ancient times but no longer exists. The stories
 might differ but the name is always the same.
 
 That's because ancient Atlantis was the largest and most powerful underwater
-civilization to ever exist. They even discovered the secret to traveling between
-worlds, and spread to these new frontiers with gusto.
+civilization to ever exist. They discovered a means of traveling to other worlds
+and exploited it with gusto.
 
 Despite its power Atlantis eventually fell, as all empires do. The exact
 sequence of events is more or less impossible to piece together, and mostly
@@ -36,28 +36,19 @@ successor cultures that might still be extant in the present day.
 Aside from giving rise to a whole bunch of legends and to fueling the occasional
 would-be despot's ambitions, the most enduring legacy of Atlantis was its
 underwater engineering. They pioneered a lot of the techniques that used to make
-sturdy weapons and tools out of implausible aquatic materials like shell, coral,
-and mother-of-pearl. They were also the first civilization to successfully make
-and work orichalcum.
+sturdy weapons and tools out of implausible aquatic materials like bone, shell,
+coral, and mother-of-pearl. They were also the first civilization to
+successfully make and work orichalcum.
 
-In many worlds, present-day techniques for working these materials are more
-advanced than Atlantean ones, but they can still trace their "lineage" back to
-the lost empire. In others Atlantean techniques remain the state of the art. In
-yet others they were lost to time, making caches of Atlantean items that much
-more valuable.
-
-Orichalcum is a material present in the core rules. Rules for shell and
-mother-of-pearl items can be found in GURPS Dungeon Fantasy 8: Treasure
-Tables. Coral items can be found [here][2]. But we're not here to talk about
-_stuff_, we're here to talk about _people_.
+But we're not here to talk about _stuff_, we're here to talk about _people_.
 
 ## So Let's Talk About People
 
 Opinions differ on whether Atlantis was a Golden Age utopia or a despotic empire
 whose downfall was a blessing to the world, but everyone agrees it was pretty
-cosmopolitan. Unlike most typical dungeon fantasy kingdoms, its citizens
-belonged to many different species with none of them making up an overwhelming
-majority of the population.
+diverse. Unlike most typical dungeon fantasy kingdoms, its citizens belonged to
+many different species with none of them making up an overwhelming majority of
+the population.
 
 Many of Atlantis' citizens can be described using already-published stats. Sea
 Elves and Water-Infused from GURPS DF 3: The Next Level fit very well, as do the
@@ -86,17 +77,16 @@ and possibly some surfacers too. They are known as "Atlanteans" because their
 general look became associated with that empire. Surprisingly, they look a lot
 like humans even when they have no humans among their ancestors.
 
-Atlanteans are warm-blooded, have legs, can breathe both air and water, and
-exhibit the same wide ethnic variance as humans. Individuals can have a variable
-number of "fishy" traits like visible gills, fins, blue or gray skin, and so
-on. These might be visually striking but are never significant enough to count
-as more than 0-point features.
+Atlanteans are warm-blooded, have legs, and can breathe both water and
+air. Their human-looking bits exhibit the same ethnic variety as
+humans. Individuals can also have a variable number of "fishy" traits like visible
+gills, fins, blue or gray skin, and so on. These might be visually striking but
+are never significant enough to count as more than 0-point features.
 
-A given world might have an Atlantean population that can trace their ancestry
-back to actual Atlantis. They could even appear in worlds that never had an
-Atlantis at all, but whose underwater peoples are usually friendly with each
-other. The base stats could also be used as they are or modified a bit to
-represent any species of underwater humanoid.
+Atlanteans can appear in worlds that had an Atlantis, or those whose underwater
+peoples are generally friendly with each other. The base stats could also be
+used as they are or modified a bit to represent any species of underwater
+humanoid.
 
 **Advantages**: Amphibious {10}, Gills {10}.
 
@@ -104,8 +94,8 @@ represent any species of underwater humanoid.
 Features in a setting where almost everyone is human and the character is the
 only known Atlantean, but in all other situations they're 0-point traits. If the
 character has something like rigid fins or a prominent tail growing out of their
-back, they might need adapted body armor. This doesn't cost extra, but might
-restrict their usage of looted armor.
+lower back, they might need adapted body armor. This doesn't cost extra, but
+might restrict their usage of looted armor.
 
 ### Crab-Folk (40 points)
 
@@ -150,6 +140,10 @@ Pressure Support 3 {15}, Tough Skin 1 {3}.
 
 **Disadvantages**: Cold-Blooded {-5}.
 
+**Optional Traits**: A variant that can operate on the surface would be closer
+to several classic D&D fish-people. They have the 10-point version of Gills and
+so cost that much more.
+
 ### Merfolk (20 points)
 
 Merfolk are humanoid from the waist up and have fish bodies from the waist
@@ -170,7 +164,7 @@ can use.
 **Optional Traits**: If your character's fish half mimics a particularly speedy
 species, they might have Enhanced Move 1 (Water) for an extra 20 points. At the
 GM's option, this might be a matter of training instead of biology, which means
-any merfolk character can buy this with earned points during a campaign.
+any merfolk character can buy this with earned points as a power-up.
 
 [1]: {{ "/2023/07/11/underwater-dungeon-fantasy.html" | relative_url }}
 [2]: {{ "/2023/11/13/underwater-items.html" | relative_url }}
