--- a/_posts/2025-02-19-anakore.md
+++ b/_posts/2025-02-19-anakore.md
@@ -7,6 +7,16 @@ tags:
     - dark-sun
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-dscc-anakore.jpg" | absolute_url }}"/>
+  <figcaption>
+    An typical anakore specimen, looking like a gray spiky armadillo man with
+    large claws. Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 I have no idea if anakores appeared before. This is the first time I've read
 about them.
 
@@ -28,11 +38,10 @@ paralytic bites.
 While on the move, the creatures subsist on plant roots, including certain
 poisonous species that help the formation of their venom. Rootless vegetation
 spread around an area is a possible signt of anakore presence, though they're
-often intelligent enough to clean this up if they intend to stay in place for a
-while.
+smart enough to clean this up if they intend to stay in place for a while.
 
 Different band members specialize in different parts of an attack - some lead
-the ambush, others strike to hurt and incapacitate victims, and yet others drago
+the ambush, others strike to hurt and incapacitate victims, and yet others drag
 those victims underground.
 
 I guess a lot of the time they prey on the local fauna, but anakores don't mind
@@ -122,7 +131,7 @@ in bizarre aberrant ruins on or under the surface, drawn there by strange dreams
 and performing unspeakable rituals.
 
 Anakores are smart enough to recognize when they're in a poor situation, and
-when they should negotiate instead of fight. But if they think they should
+when they should negotiate instead of fighting. But if they think they should
 fight, their underground ambushes can be pretty terrifying, as all of their
 powers synergize very well and make the tactics described in the lore section
 very effective.
