--- a/_posts/2025-02-19-anakore.md
+++ b/_posts/2025-02-19-anakore.md
@@ -17,6 +17,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This post is part of a series! Click [here][1] to see the rest.
+
 I have no idea if anakores appeared before. This is the first time I've read
 about them.
 
@@ -141,3 +143,5 @@ might be able to perform more than one Sand Eruption in a fight, and the Hunters
 can move with relative impunity among the party to harass and grab the
 PCs. Renders stay up top once they emerge, and all of them are immune to the
 difficult terrain created by the Kings due to Earth Walk.
+
+[1]: {{ "/projects/dscc/" | relative_url }}
