Fix description for baazrag image

--- a/_posts/2025-02-21-baazrag.md
+++ b/_posts/2025-02-21-baazrag.md
@@ -11,8 +11,7 @@ tags:
 <figure class="center">
   <img src="{{ "/assets/wir-dscc-baazrag.jpeg" | absolute_url }}"/>
   <figcaption>
-    An typical anakore specimen, looking like a gray spiky armadillo man with
-    large claws. Copyright 2010 Wizards of the Coast.
+    A pack of baazrags ready to attack. Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
 {:/nomarkdown}
