--- a/_posts/2025-03-13-cloud-ray.md
+++ b/_posts/2025-03-13-cloud-ray.md
@@ -7,6 +7,20 @@ tags:
     - dark-sun
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-dscc-cloud-ray.jpg" | absolute_url }}"/>
+  <figcaption>
+    A cilops, which is a giant centipede with one big angry eye on its head.
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the rest.
+
+## The Lore
+
 Cloud rays look like gigantic flying stingrays, and are among some of the rarest
 and most majestic specimens of Athasian fauna. They float in from the Sea of
 Silt to feed or rest, and despite their prodigious size they're rarely dangerous
@@ -136,3 +150,5 @@ rest, and even then a fight is not certain.
 I imagine you can have a good adventure about PCs trying to prevent another
 armed group from killing cloud rays, and in this case the creatures would _not_
 be smart enough to distinguish the PCs from the hunters if a fight broke out.
+
+[1]: {{ "/projects/dscc/" | relative_url }}
