--- a/_posts/2025-06-25-quar-guns.md
+++ b/_posts/2025-06-25-quar-guns.md
@@ -27,10 +27,17 @@ An individual Quar is a funny little person who just wants to chill with a hot
 cup of tea and a plate of moth cakes. Quar _societies_ however are very, er,
 quarrelsome, so most of their history is an endless procession of wars.
 
-The wargames cover a particularly turbulent period of worldwide trench warfare
-between two coalitions, one made up of monarchists and the other of
-republicans. The tech level is somewhere between WWI and WWII, and this is
-pretty much the war that introduced industrial warfare to their world.
+I was motivated to write this article both because I think the setting is neat,
+and because the technical information about Quar weapons in the Clash of Rhyfles
+game made me think I can stat them up in GURPS.
+
+## Very Short Setting Summary
+
+The wargames cover a particularly turbulent period in the history of Aldwyn, the
+Quar home world. It's marked by at least twenty years of worldwide trench
+warfare between two large multinational coalitions. The tech level is somewhere
+between WW1 and WW2, and this is pretty much the war that introduced industrial
+warfare to their world.
 
 If the idea of these adorable creatures being fed into one of the worst
 meat-grinders imaginable is horrifying to you, then you get the setting's main
@@ -38,18 +45,19 @@ idea. I've heard it described as "grimsical". It replaces the "dark" vibe from
 "grimdark" with "whimsical", but it's still grim. The cuter the miniatures for
 their soldiers and tanks get, the stronger the dissonance becomes.
 
-I was motivated to write this article both because I think the setting is neat,
-and because the technical information about Quar weapons in the Clash of Rhyfles
-game made me think I can stat them up in GURPS.
-
-## Very Short Setting Summary
-
 The Clash or Rhyfles quickstart book centers on the two main factions of the
-war. The Crusade is a coalition of nations who successfully toppled their
-traditional monarchies and became republics. They're led by the now-Republic of
-Tok. Coftyr leads an alliance of the world's remaining monarchies to stamp out
-this revolution. Free add-ons provide details for factions allied to either
-side.
+war. The Crusade is a coalition of former monarchies who successfully toppled
+their old regimes and became republics. They're led by the Republic of Tok, and
+made up of many smaller nations that follow the same standards for equipment and
+tactics. The rules here could be used for quar from any of those places.
+
+On the other side, the Kingdom of Coftyr leads an alliance of the world's
+remaining monarchies to stamp out this revolution. Each kingdom here tends to be
+visually distinct, as their whole thing is adherence to ancient traditions and
+heraldry. Therefore, the book only covers Coftyr itself.
+
+Free add-ons provide details for "sub-factions" allied to either side. These are
+Crusader or monarchist nations who do their own thing on the battlefield.
 
 As usual for wargames, both sides are morally ambiguous. Opposing monarchy is a
 good thing in my book, but the Crusade is also the side that introduced
@@ -64,7 +72,7 @@ leaders show any sign of wanting to stop.
 
 As usual for wargames, you pick the side you think looks neater, paint them up,
 and pit them against other factions in battles that would fit somewhere in those
-many years of war. Most of these battles focus on infantry with the occasional
+decades of war. Most of these battles focus on infantry with the occasional
 tanks thrown in. There seem to be airships, but I don't know if they have
 airplanes yet.
 
@@ -85,9 +93,15 @@ on them are horrible because _war_ is horrible, not because Quar are adorable.
 
 ## Quar Guns in GURPS
 
-The Clash of Rhyfles includes enough fluff about the infantry weapons of the
-Crusade that I kinda want to try statting them up in GURPS. If I ever get the
-same information for the Coftyri ones, I'll stat them up too.
+Guns in Clash or Rhyfles don't actually have damage ratings, just range and
+optional traits. The results of a ranged attack roll depend entirely on the
+degree of success for your skill roll. They might leave a target unaffected,
+Gobsmacked (stunned) or Taken Out, which is different from "dead": they might
+still be rescued during or after the battle.
+
+However, the skirmish game rules include enough fluff about the infantry weapons
+of the Crusade that I kinda want to try statting them up in GURPS. If I ever get
+the same information for the Coftyri ones, I'll stat them up too.
 
 The book mentiones the muzzle velocity and caliber of a couple of the weapons,
 and if I make a guess about the weight of the bullet I can plug those three
@@ -115,7 +129,8 @@ The closest real-world bullet to this one in GURPS High-Tech is the
 .45-something family of rifle rounds, which are 11.43mm in diameter and weight
 31 grams. After some fiddling, I decide to go with a slightly lower 27 grams for
 the Quar bullet, which gives us exactly 7d damage. This is pi+ because of the
-caliber.
+caliber. Picture them as being broader, shorter and rounder than Earth rifle
+cartridges, which is in theme for all things Quar.
 
 This gives us a gun that packs about the same punch as a real-world M1 Garand
 rifle while having almost exactly half its weight and about the length of an M16
@@ -125,27 +140,23 @@ assault rifle. That's going to have a significant kick, to say the least.
 |:--:|:------:|:------:|:---:|:--------:|:------------:|:---:|:-----:|:---:|:----:|:----|
 | 7  | Bogen  | 7d pi+ | 3   | 900/3500 | 2.4kg/0.36kg | 3   | 5(3)  | 11† | -5   | 4   |
 
-If you decide to double the weight of the rifle to get something a bit more
-realistic and easier to handle, use the following stats: Acc 5, Weight
-5kg/0.36kg, ST 10†, Rcl 3.
-
 
 ### The Rhyshi (R4) Heavy Rifle
 
 Only slightly longer than the Bogen, the Rhyshi fires a huge 20mm round with a
 720m/s muzzle velocity. Its magazine carries seven of those, and it's said to
 require a solid stance and firm support to shoot with any kind of accuracy. A
-squad mate's shoulder will do for support, according to the book, but I'm
-guessing rhyflers will also want to fit bipods to their guns if they can. If
-conditions are met, the R4 has greater range than the Bogen, and can penetrate
-up to "medium" vehicular armor.
+squad mate's shoulder will do for support, according to the book, but I'm going
+to give this rifle an integral folding bipod because I'm not a monster. A
+properly braced R4 has greater range than the Bogen, and can penetrate up to
+"medium" vehicular armor.
 
 The closest thing to this I can find on High-Tech is the Mauser Tank-Gewehr 18,
-the WWI German anti-tank rifle. Its caliber is "only" 13mm, but it's the largest
+the WW1 German anti-tank rifle. Its caliber is "only" 13mm, but it's the largest
 anti-tank rifle in that table that is even removely Quar-portable. Plugging its
 bullet mass, caliber and printed velocity in our magic spreadsheet, we get 10d+3
 damage, which following High-Tech convention can be rounded and written as
-5dx2. Let's also give it an armor-piercing round, because I see the WWI tank
+5dx2. Let's also give it an armor-piercing round, because I see the WW1 tank
 examples in the book have DR 45.
 
 5dx2 is the same damage as the T-Gew18, but the Rhyshi again weights less than
@@ -157,12 +168,6 @@ no way it can be fired in close quarters.
 | TL | Weapon | Damage      | Acc | Range     | Weight    | RoF | Shots | ST   | Bulk | Rcl |
 |:--:|:------:|:-----------:|:---:|:---------:|:---------:|:---:|:-----:|:----:|:----:|:----|
 | 7  | Rhyshi | 5dx2(2) pi+ | 4   | 1100/4400 | 7.5kg/1kg | 3   | 7(3)  | 18B† | -6   | 7   |
-
-If you decide to double the listed weight for a more "realistic" gun, use the
-following stats: Acc 5, Weight 15kg/1kg, ST 16B†, Bulk -6, Rcl 5. This version
-of the Rhyshi would probably be too unwieldy to for bayonet fighting, so it's
-more firmly in the "sniper weapon" category.
-
 
 ### Grifkis Shotgun
 
@@ -177,7 +182,7 @@ shotgun in High Tech. Let's borrow its stats and adjust for the shortened
 
 | TL | Weapon  | Damage  | Acc | Range  | Weight     | RoF  | Shots | ST  | Bulk | Rcl |
 |:--:|:-------:|:-------:|:---:|:------:|:----------:|:----:|:-----:|:---:|:----:|:----|
-| 6  | Grifkis | 2d-1 pi | 3   | 40/800 | 6kg/0.15kg | 2x13 | 2(3i) | 12† | -4   | 1   |
+| 6  | Grifkis | 2d-1 pi | 3   | 40/800 | 6kg/0.15kg | 2x13 | 2(3i) | 12† | -4   | 1/7 |
 
 The short barrels give this gun a more pronounced muzzle blast (+1 to Hearing
 and Vision to locate when fired in the dark). I'm using the listed weight for it
@@ -202,6 +207,18 @@ Bogen's stats with those of the MG34.
 This gives us a gun that's actually heavier than the Rhyshi rifle, and whose
 recoil is manageable enough that it's worth firing more than one bullet per
 turn. It fires rounds from a non-disintegrating cloth belt.
+
+## Final Impressions
+
+Look at those things. Just look at them. Their damage values combined with the
+light weight and short barrel means they have _powerful_ powder charges. Quar
+like big booms and they cannot lie.
+
+The recoil on these things means the act of firing them is somewhere between
+"comical" and "painful for the shooter". I'm guessing that a Taken Out result in
+the wargame very often means the target got spooked and decided to play dead,
+instead of actually being hit. This also explains why a quar can take
+_themselves_ out on a bad skill roll.
 
 
 [1]: https://rhyfler.com
