Small editing fixes

--- a/_posts/2025-06-25-quar-guns.md
+++ b/_posts/2025-06-25-quar-guns.md
@@ -13,7 +13,7 @@ Recently, I became aware of the Quar. Aren't they neat?
   <img src="{{ "/assets/quar-unit.png" | absolute_url }}"/>
   <figcaption>
   A squad of Quar soldiers, with officers, standard-bearer, and messenger
-  squirrel handler. Source: https://rhyfler.com
+  squirrel handler. Source: <a href="https://rhyfler.com">https://rhyfler.com</a>
   </figcaption>
 </figure>
 {:/nomarkdown}
@@ -222,3 +222,4 @@ _themselves_ out on a bad skill roll.
 
 
 [1]: https://rhyfler.com
+[2]: https://gamingballistic.com/2022/04/11/old-ballistics-spreadsheet-a-repost/
