Halflings and Hejkin

--- a/_posts/2025-08-01-hejkin.md
+++ b/_posts/2025-08-01-hejkin.md
@@ -7,6 +7,18 @@ tags:
     - dark-sun
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-dscc-hejkin.png" | absolute_url }}"/>
+  <figcaption>
+    A gith warrior with a spear.
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the rest.
+
 ## The Lore
 
 Hejkin are abominations created by the "rampant use of arcane magic" according
@@ -101,3 +113,5 @@ kobolds to challenge beginning adventurers.
 Hejkin don't collaborate with other humanoids, but they do train and keep all
 sorts of insectoid beasts, with a preference for those who can burrow. Kruthiks
 and Ankhegs are favorites.
+
+[1]: {{ "/projects/dscc/" | relative_url }}
