--- a/_posts/2025-08-01-hejkin.md
+++ b/_posts/2025-08-01-hejkin.md
@@ -11,7 +11,7 @@ tags:
 <figure class="center">
   <img src="{{ "/assets/wir-dscc-hejkin.png" | absolute_url }}"/>
   <figcaption>
-    A gith warrior with a spear.
+    A hejkin.
     Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
