--- a/_posts/2025-09-24-mekillot.md
+++ b/_posts/2025-09-24-mekillot.md
@@ -7,6 +7,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-dscc-mekillot.png" | absolute_url }}"/>
+  <figcaption>
+    A mekillot, which looks like a hill-sized lizard/pillbug hybrid.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the rest.
+
 ## The Lore
 
 These hill-sized cutie pies are a kind of drake, but they differ enough from
@@ -83,3 +94,5 @@ as an armored personal carrier by epic-level artillery and controller villains.
 Their mechanics are workable enough, but what really endears mekillots to me is
 this illustration. They look like marketable plushies even though they're likely
 to trample you to death.
+
+[1]: {{ "/projects/dscc/" | relative_url }}
