Fix a couple of typos

--- a/_posts/2022-11-11-verbeeg.md
+++ b/_posts/2022-11-11-verbeeg.md
@@ -118,7 +118,7 @@ within 5 squares of the ringleader to make a charge attack for free.
 
 ### Verbeeg Trickster
 
-This one manage to score a spellbook or two and learn some combat magic. It's a
+This one managed to score a spellbook or two and learn some combat magic. It's a
 Level 11 Controller with 115 HP. Their **spear** strikes knock the target prone
 on a hit, and they have four spells:
 
