Recap edits, for real this time

--- a/_posts/2025-10-19-recap.md
+++ b/_posts/2025-10-19-recap.md
@@ -30,6 +30,10 @@ At least one investigator on the surface is known to carry a potted recap around
 in a specially built cage, using it for its original purpose when questioning
 suspects.
 
+Even if the victim manages to resist the mind reading attempt, the recap
+will still speak a bunch of unconnected nonsense words for a minute or so. Those
+who are mainly concerned about noise should refrain from touching them at all.
+
 ## The Numbers
 
 Recaps aren't "monsters" in a literal sense. Despite their radio-announcer
@@ -60,18 +64,18 @@ cluster harmless for as long as it lasts.
 _Save_: Quick Contest of **Will** against skill 16 to avoid having your mind
 read. **Magic Resistance** helps.
 
-_Effect_: If the target won the contest of Will, this will be a string of
-nonsense words. If they lost, the recap will summarize the previous week of
-their lives as if it was the last episode of a radio serial, potentially airing
-some dirty laundry.
+_Effect_: About a minute of loud noises. If the target won the contest of Will,
+this will be a string of nonsense words. If they lost, the recap will summarize
+the previous week of their lives as if it was the last episode of a radio
+serial, potentially airing some dirty laundry.
 
 _Shots_: Constant.
 
 _Rearm_: No.
 
 _Steal_: Roll against **Naturalist** to harvest one large, healthy recap
-specimen per hex. This is worth $1000 if delivered intact to the right people
-back in town.
+specimen per hex. This weights 1 lb. and is worth $1000 if delivered intact to
+the right people back in town.
 
 ### Recap Inquisitor
 
