--- a/_posts/2025-10-19-recap.md
+++ b/_posts/2025-10-19-recap.md
@@ -23,7 +23,7 @@ lives.
 they do have a tendency to spill closely held secrets that are big sources of
 anxiety or regret for the victim. Some believe recaps they were originally
 developed by an underground civilization with a strong tradition in psionics to
-acts as interrogation tools. Nowadays you can find them in the wild inside caves
+act as interrogation tools. Nowadays you can find them in the wild inside caves
 and other damp and dark places, like many dungeons.
 
 At least one investigator on the surface is known to carry a potted recap around
