--- a/_posts/2025-10-19-recap.md
+++ b/_posts/2025-10-19-recap.md
@@ -94,3 +94,17 @@ gaps mean it doesn't protect against thrusting ones.
 
 Recap Inquisitors cost $2000 and weight 10 lbs. Monthly maintenance requires
 $100 in supplies and success in a **Naturalist** roll to keep the 'shroom alive.
+
+## Additional Notes
+
+I put in the same resistance mechanics for the two entries but I think they're
+mostly relevant for an interrogation scenario. When you step onto a recap patch
+in the wild it's probably funnier if they just succeed and narrate your last
+week. It might even be fun to have the PC's player do the narration if they're
+so inclined.
+
+I say this because in my experience PCs rarely have something to hide from each
+other, so there wouldn't be really any dirty laundry that they didn't want
+aired. Of course, if you your group _is_ a party of sneaky gits who do keep
+important secrets from each other, then you should probably keep the resistance
+test in place.
