--- a/_posts/2025-10-19-recap.md
+++ b/_posts/2025-10-19-recap.md
@@ -80,7 +80,7 @@ the right people back in town.
 ### Recap Inquisitor
 
 This consists of a large, healthy recap specimen planted on good soil in a clay
-pot, surrounded by small but sturdy iron cage with large gaps between the
+pot, surrounded by a small but sturdy iron cage with large gaps between the
 bars. It's used by the "right people" back in town or by unscrupulous villains
 in interrogations. They just need to ask (or force) the subject to poke the
 mushroom.
